snapshots/syntax/library/functions/string/len/len_array_assignment.snap
---
source: src/syntax/library/functions/string/len.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: lengths
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: i
                    - kind: RightParenthesis
                      text: )
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: LenKeyword
                      text: Len
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: strings
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: i
                                - kind: RightParenthesis
                                  text: )
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
